Baby style bugs squashed.

--- a/src/components/Fretboard.css
+++ b/src/components/Fretboard.css
@@ -21,6 +21,7 @@
   border: 1px solid #794bc4 !important;
   cursor: pointer;
   box-shadow: rgba(121, 75, 196, 1) 0px 0px 5px 0px;
+  z-index: 500;
 }
 
 .fretboard .note,
